update build exports